# L4D2Fix

./: .clang-tidy  .gitignore  CHANGES.md  CMakeLists.txt  README.md  USAGE.md  justfile  kpatch.ini  vcpkg.json  xmake.lua
.github/workflows/: build-debug.yaml  build-release.yaml  build.yaml
assets/: left4dead2_fix - Shortcut.lnk  请读我-自测补丁.txt  请读我.txt
launcher/: main.cpp
src/: dllmain.cpp  helper.hpp  hooks_dvb.h  hooks_exename.h  hooks_indexbuffer.h  hooks_indices.h  hooks_vertexbuffer.h  lib.cpp  proxy.h  stdafx.h  vars.h
third/: dllmain.cpp  version.def
